cluster/apps/utils/octoprint/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: octoprint
  namespace: utils
spec:
  externalName: octopi.home
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  type: ExternalName
